--- a/dist.ini
+++ b/dist.ini
@@ -27,5 +27,8 @@ filename = README.md
 location = root
 [PkgVersion]
 [PodWeaver]
-[AutoPrereqs]
-
+[Prereqs]
+Moo = 1.000006
+Mojo = 3.62
+Hash::Merge::Simple = 0.051
+perl = 5.014
