Use correct module for Mojolicious prereq

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,6 @@ location = root
 [PodWeaver]
 [Prereqs]
 Moo = 1.000006
-Mojo = 3.62
+Mojolicious = 3.62
 Hash::Merge::Simple = 0.051
 perl = 5.014
