Update README to include my name as an author; some slight documentation changes; update synopsis code

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Net-Easypost
-author  = Mark Allen <mrallen1@yahoo.com>
+author  = Mark Allen <mrallen1@yahoo.com>, Hunter McMillen <mcmillhj@gmail.com>
 license = Perl_5
 copyright_holder = Mark Allen
 copyright_year   = 2012
