Edit dist.ini to now point to my fork as the official repo, add travis CI and code coverage intergration.

--- a/dist.ini
+++ b/dist.ini
@@ -18,7 +18,7 @@ remove = Readme
 [MetaJSON]
 [AutoMetaResources]
 bugtracker.rt      = 1
-repository.github  = user:mrallen1;lcdist:Net-Easypost
+repository.github  = user:mcmillhj;lcdist:Net-Easypost
 homepage           = https://metacpan.org/dist/%{dist}
 [ReadmeFromPod]
 [ReadmeAnyFromPod]
