reduce lowest supported Perl version to 5.14, add [GitHubREADME::Badge] to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ homepage           = https://metacpan.org/dist/%{dist}
 type = markdown
 filename = README.md
 location = root
+[GitHubREADME::Badge]
 [PkgVersion]
 [PodWeaver]
 [CPANFile]
@@ -33,5 +34,5 @@ Moo = 1.004002
 IO::Socket::SSL = 1.962
 Mojolicious = 4.66
 Hash::Merge::Simple = 0.051
-perl = 5.016
+perl = 5.014
 Types::Standard = 0.040
