minor changes to many files and tests, add Makefile.PL and cpanfile to build so people that dont want Dist::Zilla can install this module easier

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,9 @@ location = root
 [PkgVersion]
 [PodWeaver]
 [CPANFile]
+[CopyFilesFromBuild]
+copy = cpanfile
+copy = Makefile.PL
 [Prereqs]
 Moo = 1.004002
 IO::Socket::SSL = 1.962
