--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,11 @@ allow_dirty = Changes
 [@Filter]
 bundle = @Basic
 remove = Readme
+remove = GatherDir
+[GatherDir]
+exclude_filename = cpanfile
+exclude_filename = LICENSE
+exclude_filename = Makefile.PL
 [MetaJSON]
 [AutoMetaResources]
 bugtracker.rt      = 1
@@ -32,6 +37,7 @@ location = root
 [CopyFilesFromBuild]
 copy = cpanfile
 copy = Makefile.PL
+copy = LICENSE
 [Prereqs]
 Moo = 1.004002
 IO::Socket::SSL = 1.962
